--- a/package.json
+++ b/package.json
@@ -3,8 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "dotenv": "^8.2.0",
+    "i18next": "^19.0.0",
+    "i18next-browser-languagedetector": "^4.0.1",
+    "i18next-locize-backend": "^2.1.0",
+    "locize-editor": "^2.2.2",
+    "locize-lastused": "^1.1.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-i18next": "^11.1.0",
     "react-scripts": "3.1.2"
   },
   "scripts": {
