--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-i18next": "^11.1.0",
-    "react-scripts": "3.1.2"
+    "react-redux": "^7.1.3",
+    "react-scripts": "3.1.2",
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
